api/k8s-resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  namespace: api-gateway
  labels:
    app: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: ghcr.io/luka-j/matf-rs2-api-gateway-api:sha-4b4794d4cb86fc412f233e035a5a8ca867c47234
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        - containerPort: 8080
